apps/webapp/deployment/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: kubemacs
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - "apisnoop.cncf.io"
      secretName: letsencrypt-prod-apisnoop-cncf-io
  rules:
  - host: apisnoop.cncf.io
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp
          servicePort: 3000
